Add the combo_sc combobox inside the actions area

--- a/bin/openerp.glade
+++ b/bin/openerp.glade
@@ -209,6 +209,10 @@
             <property name="visible">True</property>
             <property name="layout_style">GTK_BUTTONBOX_END</property>
             <child>
+              <widget class="GtkComboBox" id="combo_sc">
+              </widget>
+            </child>
+            <child>
               <widget class="GtkButton" id="okbutton1">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
